traefik/tls/06_service.yml
# Declare Traefik ingress service
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 8080
      name: dashboard
